--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.centered{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.align-centered{
+  display: flex;
+  justify-content: center;
+}
